--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   latlong2: ^0.9.1
   provider: ^6.1.1
   transparent_image: ^2.0.1
+  tflite_flutter: ^0.12.1
+  image: ^4.1.7
 
 dev_dependencies:
   flutter_test:
