--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   permission_handler: ^12.0.1
   go_router: ^17.0.0
   image_picker: ^1.2.1
+  flutter_secure_storage: ^8.0.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
   provider: ^6.1.1
