--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2 # UPDATED: Changed from ^0.19.0 to match SDK requirements
   
   cupertino_icons: ^1.0.8
 
